--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,8 +9,9 @@ python = "^3.8"
 jupyter = "*"
 jupyter-contrib-nbextensions = "*"
 jupyter_nbextensions_configurator = "*"
-jedi = "^0.17"  # jedi 0.18 is incompatible with ipython 7.19
 nbdime = "*"
+jedi = "^0.17"  # jedi 0.18 is incompatible with ipython 7.19
+nbconvert = "<6"  # nbconvert 6.x replaced 'template_path' with 'template_paths'
 
 [tool.poetry.dev-dependencies]
 
