--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,8 +10,8 @@ jupyter = "*"
 jupyter-contrib-nbextensions = "*"
 jupyter_nbextensions_configurator = "*"
 nbdime = "*"
-nbconvert = "<6.0"  # nbconvert 6.x replaced 'template_path' with 'template_paths' remove
-                  # when fixed
+nbconvert = "<6.0"  # nbconvert 6.x replaced 'template_path' with 'template_paths'
+                    # remove when fixed
 
 [tool.poetry.dev-dependencies]
 
