--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,8 +12,9 @@ jupyter_nbextensions_configurator = "*"
 nbdime = "*"
 nbconvert = "<6.0"  # nbconvert 6.x replaced 'template_path' with 'template_paths'
                     # remove when fixed
+ipyleaflet = "*"
 
-ipyleaflet = "^0.13.6"
+
 [tool.poetry.dev-dependencies]
 
 [build-system]
